make the height of the cards uniform, fix the overflowing of data in listings.

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -143,6 +143,6 @@ body {
 }
 
 .responsive-cards{ 
-  min-height: 12rem; 
-  max-height: 12rem;
-}
+  min-height: 14rem; 
+  max-height: 14rem;
+} 
